services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: goals-backend-svc
  name: goals-backend-svc
spec:
  ports:
  - name: 5001-5001
    port: 5001
    protocol: TCP
    targetPort: 5001
  selector:
    app: goals-backend
  type: ClusterIP
status:
  loadBalancer: {}

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: goals-frontend-svc
  name: goals-frontend-svc
spec:
  ports:
  - name: 3000-3000
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: goals-frontend
  type: ClusterIP
status:
  loadBalancer: {}
